--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "module",
     "url": "git+https://github.com/comp426-2022-spring/a04-karengu0.git"
   },
-  "author": "",
+  "author": "Karen Guo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a04-karengu0/issues"
