--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/comp426-2022-spring/a04-karengu0#readme",
   "dependencies": {
-    "better-sqlite3": "^7.5.1"
+    "better-sqlite3": "^7.5.1",
+    "morgan": "^1.10.0"
   }
 }
