--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/comp426-2022-spring/a04-karengu0#readme",
   "dependencies": {
     "better-sqlite3": "^7.5.1",
+    "express": "^4.17.3",
     "morgan": "^1.10.0"
   }
 }
